<resources>
    <string name="app_name">SA Inflation Calculator</string>


    <string name="ok">OK</string>
    <string name="action_about">About</string>
    <string name="action_reset">Reset</string>
    <string name="inflation_calc_title">Inflation Adjustment Calculator</string>
    <string name="inflation_calc_description">What goes up, must go up some more</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="amount">Amount</string>
    <string name="result_answer">Result</string>
    <string name="reverse_result_answer">Reverse result: %1$s</string>
    <string name="about_heading">About this app</string>
    <string name="about_message">Calculate what historical, inflation adjusted money is worth today. The months from January 1960 to present are supported.\n\nData retrieved from http://inflationcalc.co.za, created by Renier Crause\n\nAll calculations are based on the official inflation index data available at www.statssa.gov.za/\n\n Modified images used are compliant with the <b>CC BY-NC-ND 2.0</b> license (https://creativecommons.org/licenses/by-nc-nd/2.0/)\n\n v%1$s</string>
    <string name="yyyy_mm_dd">YYYY/MM/DD</string>
    <string name="enter_amount_hint">Enter amount (R)</string>
    <string name="current_value_hint">Current value?</string>
    <string name="calculate_button">Calculate!</string>

    <!-- Error messages -->
    <string name="error_start_after_future">The start date can\'t be after the future date :)</string>
    <string name="error_before_1960">Sorry, we only support dates starting from 1960 :(</string>
    <string name="error_timetravel_past">Let\'s not go back into the past please :)</string>
    <string name="error_timetravel_future">Whoa there, you\'re reaching too far.\n\nThis is the future that we are talking about here and we can\'t make predictions at the moment</string>
    <string name="error_no_amount">Please enter an amount in order to make the calculation</string>
    <string name="error_calculation_result">Error in calculating the result, check if all the fields are filled in</string>

</resources>
