<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_calc_layout"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_calc_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/action_bar_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:maxLines="1"
            android:textSize="20sp"
            android:textColor="@android:color/white" />

    </android.support.v7.widget.Toolbar>

    <TextView android:text="@string/inflation_calc_title"
        android:id="@+id/inflation_calc_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textSize="22dp"
        android:textColor="#212121"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/start_date_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/start_date_heading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#727272"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp" />

            <EditText
                android:id="@+id/enter_start_date_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:hint="DD/MM/YYYY"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_date_container"
            android:layout_below="@id/start_date_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/end_date_heading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#727272"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp" />

            <EditText
                android:id="@+id/enter_end_date_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:hint="DD/MM/YYYY"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/amount_container"
            android:layout_below="@id/end_date_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/amount_heading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#727272"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp" />

            <EditText
                android:id="@+id/enter_amount_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="18sp"
                android:editable="true"
                android:hint="Enter amount (R)"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/result_container"
            android:layout_below="@id/amount_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/result_heading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_answer"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#727272"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp" />

            <EditText
                android:id="@+id/result_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:hint="Current value?"
                android:clickable="false"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:ems="10"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/reverse_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/result_container"
            android:text="@string/reverse_result_answer"
            android:layout_margin="10dp"
            android:visibility="gone"
            tools:text="Reverse result: R1000"
            android:textSize="18sp"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/calculate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reverse_answer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Calculate!"
            />

    </RelativeLayout>

</LinearLayout>